// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render several types of payments 1`] = `
<div
  class="cff-response-payment-history"
>
  Status: 
  <strong>
    NOT PAID
  </strong>
  <br />
  Amount Owed: 
  <strong>
    $0.00
  </strong>
  <br />
  Amount Paid: 
  <strong>
    $0.00
  </strong>
  <br />
  <br />
  <div
    class="ReactTable"
  >
    <div
      class="rt-table"
      role="grid"
    >
      <div
        class="rt-thead -header"
        style="min-width:400px"
      >
        <div
          class="rt-tr"
          role="row"
        >
          <div
            class="rt-th rt-resizable-header -cursor-pointer"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class="rt-resizable-header-content"
            >
              Amount
            </div>
            <div
              class="rt-resizer"
            />
          </div>
          <div
            class="rt-th rt-resizable-header -cursor-pointer"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class="rt-resizable-header-content"
            >
              Method
            </div>
            <div
              class="rt-resizer"
            />
          </div>
          <div
            class="rt-th rt-resizable-header -cursor-pointer"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class="rt-resizable-header-content"
            >
              ID
            </div>
            <div
              class="rt-resizer"
            />
          </div>
          <div
            class="rt-th rt-resizable-header -cursor-pointer"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class="rt-resizable-header-content"
            >
              Date
            </div>
            <div
              class="rt-resizer"
            />
          </div>
        </div>
      </div>
      <div
        class="rt-tbody"
        style="min-width:400px"
      >
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -odd"
            role="row"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              $12.00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              paypal_ipn
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              id1
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              date1
            </div>
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -even"
            role="row"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              $24.00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              paypal_ipn
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              id2
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              date1
            </div>
          </div>
        </div>
      </div>
      <div
        class="rt-tfoot"
        style="min-width:400px"
      >
        <div
          class="rt-tr"
          role="row"
        >
          <div
            class="rt-td"
            role="gridcell"
            style="flex:100 0 auto;width:100px"
          >
            <div>
              <input
                class="form-control form-control-sm"
                placeholder="Amount"
                value=""
              />
            </div>
          </div>
          <div
            class="rt-td"
            role="gridcell"
            style="flex:100 0 auto;width:100px"
          >
            <div>
              <select
                class="form-control form-control-sm"
              >
                <option
                  disabled=""
                  selected=""
                  value=""
                >
                  Method
                </option>
                <option
                  value="manual_check"
                >
                  Check
                </option>
                <option
                  value="manual_cash"
                >
                  Cash
                </option>
                <option
                  value="manual_credit_card"
                >
                  Credit Card
                </option>
              </select>
            </div>
          </div>
          <div
            class="rt-td"
            role="gridcell"
            style="flex:100 0 auto;width:100px"
          >
            <div>
              <input
                class="form-control form-control-sm"
                placeholder="ID"
                value=""
              />
            </div>
          </div>
          <div
            class="rt-td"
            role="gridcell"
            style="flex:100 0 auto;width:100px"
          >
            <div>
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container"
                >
                  <input
                    class=""
                    type="text"
                    value="07/14/2019"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="-loading"
    >
      <div
        class="-loading-inner"
      >
        Loading...
      </div>
    </div>
  </div>
  <div
    class="ccmt-cff-Page-FormPage"
  >
    <form
      autocomplete="false"
      class="rjsf"
    >
      <div
        class="form-group field field-object"
      >
        <div
          class="container-fluid"
        >
          <span />
          <div />
          <div
            class="row"
          >
            <div
              class="form-group field field-boolean"
            >
              <div>
                <label
                  class="control-label"
                />
                <div
                  class="checkbox form-check "
                >
                  <input
                    checked=""
                    class="form-check-input"
                    id="root_sendEmail"
                    style="bottom:0"
                    type="checkbox"
                  />
                  <label
                    class="form-check-label"
                    for="root_sendEmail"
                  >
                    Send confirmation email
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="btn btn-sm btn-primary cff-payment-history-btn-add"
      >
        Add new payment
      </button>
    </form>
  </div>
</div>
`;

exports[`renders table with no payments found 1`] = `
<div
  class="cff-response-payment-history"
>
  Status: 
  <strong>
    NOT PAID
  </strong>
  <br />
  Amount Owed: 
  <strong>
    $0.00
  </strong>
  <br />
  Amount Paid: 
  <strong>
    $0.00
  </strong>
  <br />
  <br />
  <div
    class="ReactTable"
  >
    <div
      class="rt-table"
      role="grid"
    >
      <div
        class="rt-thead -header"
        style="min-width:400px"
      >
        <div
          class="rt-tr"
          role="row"
        >
          <div
            class="rt-th rt-resizable-header -cursor-pointer"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class="rt-resizable-header-content"
            >
              Amount
            </div>
            <div
              class="rt-resizer"
            />
          </div>
          <div
            class="rt-th rt-resizable-header -cursor-pointer"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class="rt-resizable-header-content"
            >
              Method
            </div>
            <div
              class="rt-resizer"
            />
          </div>
          <div
            class="rt-th rt-resizable-header -cursor-pointer"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class="rt-resizable-header-content"
            >
              ID
            </div>
            <div
              class="rt-resizer"
            />
          </div>
          <div
            class="rt-th rt-resizable-header -cursor-pointer"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class="rt-resizable-header-content"
            >
              Date
            </div>
            <div
              class="rt-resizer"
            />
          </div>
        </div>
      </div>
      <div
        class="rt-tbody"
        style="min-width:400px"
      />
      <div
        class="rt-tfoot"
        style="min-width:400px"
      >
        <div
          class="rt-tr"
          role="row"
        >
          <div
            class="rt-td"
            role="gridcell"
            style="flex:100 0 auto;width:100px"
          >
            <div>
              <input
                class="form-control form-control-sm"
                placeholder="Amount"
                value=""
              />
            </div>
          </div>
          <div
            class="rt-td"
            role="gridcell"
            style="flex:100 0 auto;width:100px"
          >
            <div>
              <select
                class="form-control form-control-sm"
              >
                <option
                  disabled=""
                  selected=""
                  value=""
                >
                  Method
                </option>
                <option
                  value="manual_check"
                >
                  Check
                </option>
                <option
                  value="manual_cash"
                >
                  Cash
                </option>
                <option
                  value="manual_credit_card"
                >
                  Credit Card
                </option>
              </select>
            </div>
          </div>
          <div
            class="rt-td"
            role="gridcell"
            style="flex:100 0 auto;width:100px"
          >
            <div>
              <input
                class="form-control form-control-sm"
                placeholder="ID"
                value=""
              />
            </div>
          </div>
          <div
            class="rt-td"
            role="gridcell"
            style="flex:100 0 auto;width:100px"
          >
            <div>
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container"
                >
                  <input
                    class=""
                    type="text"
                    value="07/14/2019"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rt-noData"
    >
      No rows found
    </div>
    <div
      class="-loading"
    >
      <div
        class="-loading-inner"
      >
        Loading...
      </div>
    </div>
  </div>
  <div
    class="ccmt-cff-Page-FormPage"
  >
    <form
      autocomplete="false"
      class="rjsf"
    >
      <div
        class="form-group field field-object"
      >
        <div
          class="container-fluid"
        >
          <span />
          <div />
          <div
            class="row"
          >
            <div
              class="form-group field field-boolean"
            >
              <div>
                <label
                  class="control-label"
                />
                <div
                  class="checkbox form-check "
                >
                  <input
                    checked=""
                    class="form-check-input"
                    id="root_sendEmail"
                    style="bottom:0"
                    type="checkbox"
                  />
                  <label
                    class="form-check-label"
                    for="root_sendEmail"
                  >
                    Send confirmation email
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="btn btn-sm btn-primary cff-payment-history-btn-add"
      >
        Add new payment
      </button>
    </form>
  </div>
</div>
`;
